<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="sma.rhythmtapper.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:padding="20dp"
        >

        <Button
            android:text="@string/main_btn_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/main_btn_start"
            android:background="@android:color/holo_green_dark" />

        <Button
            android:text="@string/main_btn_highscore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/main_btn_highscore" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/main_btn_about"
            android:text="@string/main_btn_about" />
    </LinearLayout>
</RelativeLayout>
