<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_difficulty_selection"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sma.rhythmtapper.DifficultySelectionActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/diff_radio_easy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/diff_btn_easy"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Colored"
            android:background="@android:color/holo_green_dark" />

        <Button
            android:text="@string/diff_radio_mid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/diff_btn_mid"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Colored"
            android:background="@android:color/holo_orange_light" />

        <Button
            android:text="@string/diff_radio_hard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/diff_btn_hard"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Colored"
            android:background="@android:color/holo_red_dark" />

    </LinearLayout>
</RelativeLayout>
